Debug and correct install script