@@ -1,3 +1,640 @@
+ Start new chat
+
+    Projects
+
+Starred
+
+Senior Design Project
+
+    Arduino Code for Teensy 4.0
+
+Recents
+
+Connecting Java to MySQL Database
+Handling Yes/No Input in Java Console App
+Interfacing Teensy 4.0 and Raspberry Pi
+Senior Design Project
+University Database Queries
+Packaging a JavaFX program for Raspberry Pi
+JavaFX Project
+
+    Shared JavaFX UI Elements for Flight Telemetry
+
+View all
+Professional plan
+Help & support
+E
+
+I'm writing a JavaFX program for running on a Raspberry Pi that uses the Bellsoft JDK and the jSericalComm library. I would like to have a simple way of installing this program. Would it be better to write a bash shell script or could I package it into a .deb installer?
+
+Both approaches are viable, but creating a .deb package would generally provide a more polished and maintainable installation experience. Let me explain both options and help you create a solution.
+
+Let me explain the advantages of each approach:
+
+Shell Script Approach:
+
+    Simpler to develop and test
+    More transparent - users can see exactly what's being installed
+    Easier to modify for different environments
+    Good for development and testing
+
+.deb Package Approach:
+
+    More professional and standardized
+    Better integration with system package management
+    Easier updates and uninstallation
+    Proper dependency handling
+    Can be distributed through repositories
+
+I recommend starting with the shell script during development and testing, then moving to a .deb package for final distribution. The .deb package will provide:
+
+    Clean installation/uninstallation through apt
+    Proper dependency management
+    System integration
+    Version control
+    Easier updates
+
+To build the .deb package, you'll need to:
+
+    Install build tools: sudo apt-get install build-essential dh-make
+    Create the package directory structure
+    Use dpkg-deb to build the package
+
+Would you like me to provide more specific details about either approach? For example, I could show how to handle specific dependencies or add additional installation options.
+E
+
+I think I'll go with the shell script approach. However I need JDK 21. I also need to have jSerialComm installed and added to the classpath.
+
+I'll modify the shell script to use JDK 21 and properly handle the jSerialComm library dependency.
+
+This updated script includes:
+
+    Installation of BellSoft JDK 21 specifically for ARM
+    Automatic download and installation of jSerialComm library
+    Proper classpath configuration including all JARs in the lib directory
+    Better error handling and user feedback
+    Appropriate permissions setup
+
+To use this script:
+
+    Place it in the same directory as your application JAR file
+    Make it executable: chmod +x install-javafx.sh
+    Run it as root: sudo ./install-javafx.sh
+
+You'll need to:
+
+    Replace com.yourcompany.MainClass with your actual main class
+    Ensure your JAR file is named mypifxapp.jar or update the script accordingly
+    Place any additional dependency JARs in the lib directory before running the script
+
+Would you like me to modify anything about the script? For example, I could:
+
+    Add specific error handling for different scenarios
+    Include validation for ARM architecture
+    Add backup/restore functionality
+    Include uninstall capabilities
+
+E
+
+Will this ensure that the jSerialComm is available every time the raspberry pi starts up?
+
+The script as written will install jSerialComm to a permanent location (/opt/mypifxapp/lib), and the launcher script will include it in the classpath every time the application runs. However, if you're asking about having serial port access rights every time the Pi starts up, we should add some additional system configuration to ensure proper permissions. Let me modify the script to handle this.
+
+The key additions to ensure serial port access persists across reboots are:
+
+    Creates and configures the dialout group
+    Adds the user to the dialout group
+    Sets up persistent udev rules in /etc/udev/rules.d/99-serial.rules
+    Configures permissions for various types of serial ports (USB, ACM, AMA, S0)
+    Includes necessary JVM arguments for serial port access
+
+After running this script, the serial ports will be accessible:
+
+    Immediately through the udev rules
+    Permanently across reboots
+    To any user in the dialout group
+
+The user will need to log out and back in (or reboot) for the group membership changes to take effect.
+
+Would you like me to:
+
+    Add support for additional serial port types?
+    Include more verbose error checking for serial port access?
+    Add a test function to verify serial port accessibility?
+    Modify the permissions or access model?
+
+E
+
+The application only needs to communicate over USB serial to a Teensy microcontroller.
+
+I'll streamline the script to focus specifically on USB serial communication with a Teensy. The Teensy typically shows up as a USB ACM device on Linux.
+
+Key changes in this version:
+
+    Focused only on Teensy USB serial communication
+    Added a specific udev rule for Teensy (16c0:0483 is the typical Teensy USB serial identifier)
+    Creates a persistent symlink at /dev/teensy for easier access
+    Simplified permissions to only what's needed for Teensy communication
+    Added detection of connected Teensy device
+
+The script will:
+
+    Install JDK 21 and jSerialComm
+    Set up persistent Teensy USB permissions
+    Create a symlink for easy access
+    Configure your application to run with the correct permissions
+
+Would you like me to:
+
+    Add automatic detection of different Teensy variants?
+    Include a test function to verify Teensy communication?
+    Add more detailed error reporting for USB connection issues?
+    Modify the permissions model?
+
+E
+
+My application doesn't use maven, gradle or any dependency manager. Does this affect the install script?
+
+Since you're not using a dependency manager, we'll need to ensure all required JAR files are bundled with your application. Let me modify the script to handle a simpler, direct JAR file deployment structure.
+
+Key changes for the standalone deployment:
+
+    Removed automatic downloading of jSerialComm - it should be included in your lib directory
+    Added checks for required files before installation
+    Expects this directory structure before running:
+
+./
+├── mypifxapp.jar (your main application jar)
+├── config.properties (optional)
+└── lib/
+    ├── javafx-*.jar files
+    ├── jserialcomm-*.jar
+    └── other dependencies
+
+To use this script:
+
+    Create a directory containing your application JAR
+    Create a 'lib' subdirectory with all required dependencies
+    Place this install script in the same directory
+    Make it executable: chmod +x install-javafx.sh
+    Run as root: sudo ./install-javafx.sh
+
+Would you like me to:
+
+    Add verification that all required JavaFX modules are present?
+    Include a way to specify the main class via command line?
+    Add backup/restore functionality?
+    Add an uninstall option?
+
+E
+
+My program is called ThrustStand. The file structure is as follows:
+ThrustStand > bin
+ThrustStand > lib
+ThrustStand > src
+ThrustStand > src > fxml
+ThrustStand > src > resources
+
+I'll modify the script to match your specific project structure for ThrustStand.
+
+Key changes for ThrustStand:
+
+    Matches your exact directory structure
+    Includes FXML and resources directories in the installation
+    Sets up the classpath to include:
+        Compiled classes from bin directory
+        All JARs from lib directory
+        src directory for FXML and resources access
+    Assumes your main class is application.Main (let me know if this needs to be changed)
+
+To use this script:
+
+    Place it in your ThrustStand root directory (same level as bin, lib, and src)
+    Make it executable: chmod +x install-thruststand.sh
+    Run as root: sudo ./install-thruststand.sh
+
+Would you like me to:
+
+    Change the main class name?
+    Add any specific environment variables?
+    Include additional resource directories?
+    Add an uninstall option?
+
+E
+
+The java files are in ThrustStand>src
+The main class is called ThrustStand.java
+
+I'll modify the script to include the Java source files and correct the main class.
+
+Key changes made:
+
+    Updated directory structure to match your project
+    Changed main class to ThrustStand
+    Added compilation step for Java source files
+    Removed bin directory references since we're compiling directly from source
+    Includes all source files in the installation
+    Changes to the installation directory when running to ensure relative paths work
+
+To use this script:
+
+    Place it in your ThrustStand root directory (same level as src and lib)
+    Make it executable: chmod +x install-thruststand.sh
+    Run as root: sudo ./install-thruststand.sh
+
+Would you like me to:
+
+    Add error checking for the compilation step?
+    Include specific Java compilation flags?
+    Add an uninstall option?
+    Add any specific runtime flags for the JVM?
+
+E
+
+The compiled classes are in the bin folder
+
+Ah, I understand now - you're keeping the compiled classes in the bin folder. Let me modify the script to use the pre-compiled classes instead of trying to compile from source.
+
+Key changes:
+
+    Removed compilation step since we're using pre-compiled classes
+    Uses the bin directory for compiled classes
+    Sets up classpath to include:
+        bin directory (for compiled classes)
+        lib directory (for JAR dependencies)
+        src directory (for FXML and resources)
+    Maintains your exact directory structure in the installation
+
+To use this script:
+
+    Place it in your ThrustStand root directory (same level as bin, lib, and src)
+    Make it executable: chmod +x install-thruststand.sh
+    Run as root: sudo ./install-thruststand.sh
+
+Would you like me to:
+
+    Add any specific JVM runtime options?
+    Add an uninstall option?
+    Add any additional error checking?
+    Configure any specific memory settings for the JVM?
+
+E
+
+Can we remove the teensy-specific portions of the install file? There is code in the program to select the appropriate serial device
+
+Yes, let's simplify the script by removing the Teensy-specific portions and just ensure general serial port access is available.
+
+Key changes:
+
+    Removed all Teensy-specific configuration
+    Removed Teensy udev rules
+    Kept general serial port access setup (dialout group)
+    Simplified the output messages
+
+The script now:
+
+    Installs JDK 21
+    Copies your application files to /opt/thruststand
+    Ensures the user has serial port access through the dialout group
+    Creates a launcher in /usr/local/bin
+
+Would you like me to:
+
+    Add any JVM runtime options?
+    Add an uninstall option?
+    Add any additional error checking?
+    Add any specific permission settings?
+
+E
+
+Does it matter where this install script is located? Should it be placed anywhere specific within my project folder?
+
+The install script should be placed in the root directory of your ThrustStand project, at the same level as the bin, lib, and src folders. This is because the script uses relative paths to find these directories.
+
+Your project structure should look like this:
+
+ThrustStand/
+├── bin/
+├── lib/
+├── src/
+│   ├── fxml/
+│   └── resources/
+└── install-thruststand.sh
+
+If the script were placed in any other location, the directory checks would fail because they look for directories relative to where the script is being run from:
+
+bash
+
+if [ ! -d "bin" ]; then
+    echo "Error: bin directory not found"
+    exit 1
+fi
+
+if [ ! -d "lib" ]; then
+    echo "Error: lib directory not found"
+    exit 1
+fi
+
+if [ ! -d "src/fxml" ]; then
+    echo "Error: src/fxml directory not found"
+    exit 1
+fi
+
+To install:
+
+    Place the script in the ThrustStand root directory
+    Make it executable: chmod +x install-thruststand.sh
+    Run it from that directory: sudo ./install-thruststand.sh
+
+If you need to run the script from a different location, we would need to modify it to use absolute paths or accept the project directory as a parameter.
+E
+
+This application is part of a github repository. The only file that is in the lib folder is the jSerialComm jar file. I
+
+Ah, for a GitHub repository, we should modify the script to handle JavaFX dependencies separately since they shouldn't be included in the repository. Let me update the script to handle this setup.
+
+Key changes:
+
+    Added JavaFX SDK installation (using ARM32 version with Monocle)
+    Updated classpath handling to include JavaFX modules
+    Added proper JavaFX module configuration in the launcher script
+    Specifically checks for jserialcomm JAR in lib directory
+    Simplified lib directory handling since it only contains jserialcomm
+
+The script should still be placed in your project's root directory, alongside the bin, lib, and src folders. Your GitHub repository structure should look like:
+
+ThrustStand/
+├── bin/
+├── lib/
+│   └── jserialcomm-2.10.4.jar
+├── src/
+│   ├── fxml/
+│   └── resources/
+├── install-thruststand.sh
+└── README.md (and other repo files)
+
+Would you like me to:
+
+    Add version checking for the jserialcomm JAR?
+    Add any JVM runtime options?
+    Add an uninstall option?
+    Modify the JavaFX module configuration?
+
+E
+
+I think JavaFX is included with the bellsoft jdk. Does it need to be installed separately?
+
+You're absolutely right - the BellSoft Liberica JDK includes JavaFX bundled with it. Let me simplify the script by removing the separate JavaFX installation since it's not needed.
+
+Key changes:
+
+    Removed separate JavaFX installation since it's included with BellSoft JDK
+    Simplified the launcher script (removed module-path since JavaFX is bundled)
+    Kept the --add-modules flag which is still needed to enable JavaFX modules
+    Updated the comment about BellSoft JDK to note that it includes JavaFX
+
+The script is now more streamlined while maintaining all the necessary functionality. Would you like me to:
+
+    Add any specific JVM runtime options?
+    Add an uninstall option?
+    Add more error checking?
+    Make any other modifications?
+
+E
+
+The lib and resources folders will need to be created during the installation process as their contents are ignored by git.
+
+Ah yes, for a Git repository we should modify the script to create these directories if they don't exist, rather than treating their absence as an error.
+
+Key changes:
+
+    Removed checks for lib and resources directories
+    Added automatic creation of lib and resources directories if they don't exist
+    Added automatic download of jSerialComm JAR if not present
+    Made the resources copy operation conditional on directory having contents
+    Maintained checks for critical directories (bin, src, src/fxml)
+
+This version of the script is better suited for a Git repository where certain directories are ignored. It will:
+
+    Create any missing directories
+    Download required dependencies
+    Only copy resources if they exist
+
+Would you like me to:
+
+    Add any specific JVM runtime options?
+    Add an uninstall option?
+    Add more error checking?
+    Modify the dependency download process?
+
+E
+
+The png located at this url will need to be placed in the resources folder during install https://wmich.edu/sites/default/files/attachments/u171/2020/WMU%20primary-digital.png
+
+I'll add downloading and setting up the WMU logo to the script.
+
+Key changes:
+
+    Added WMU logo URL as a variable at the top of the script
+    Added automatic download of the WMU logo to src/resources if not present
+    Updated directory structure display to show the logo file
+
+The script will now:
+
+    Create required directories
+    Download jSerialComm
+    Download the WMU logo
+    Install everything to the correct locations
+
+Would you like me to:
+
+    Add error handling for the logo download?
+    Add an uninstall option?
+    Add specific file permissions for the logo?
+    Make any other modifications?
+
+E
+
+Two fixes:
+1. I have added a css file in src/styles/
+
+I'll update the script to handle the CSS file and styles directory.
+
+Key changes:
+
+    Added verification check for src/styles directory
+    Added styles directory to installation directory structure
+    Added copying of styles directory contents
+    Updated directory structure display to show styles directory
+
+Would you like me to:
+
+    Add any error handling for the CSS files?
+    Add an uninstall option?
+    Make any other modifications?
+
+E
+
+    I am getting an error when trying to execute the command thruststand which says /usr/local/bin/thruststand: line 9: java: command not found
+
+This suggests that the Java installation path isn't in the system's PATH environment. Let me modify the script to handle this and use the full path to the Java executable.
+
+Key changes:
+
+    Added JAVA_HOME variable with the specific path to the BellSoft JDK
+    Created a system-wide environment script in /etc/profile.d/
+    Modified the launcher script to:
+        Source the Java environment
+        Use the full path to the Java executable
+    Added better Java installation verification
+    Updated the output to show Java installation path
+
+The script now ensures that:
+
+    Java is properly installed in a known location
+    The Java path is available system-wide
+    The launcher uses the full path to Java
+
+Would you like me to:
+
+    Add additional error checking for Java installation?
+    Add an uninstall option?
+    Make any other modifications?
+
+E
+
+Actually it appears that java simply isn't installed after running the script. Running "java" alone throws the same error
+
+Let's troubleshoot the Java installation. First, let's add better error checking for the Java installation process and make sure we handle potential apt dependencies.
+
+Key changes:
+
+    Added a dedicated function for Java installation with better error handling
+    Added installation of required dependencies (libc6-armel)
+    Added proper alternatives setup for Java
+    Added verification steps after Java installation
+    Improved error reporting for the Java installation process
+    Added immediate Java version verification after installation
+
+After running the script, please check if:
+
+    which java shows the correct path
+    java -version works and shows version 21
+
+If you're still having issues, we can:
+
+    Try using a different Java installation method
+    Add more detailed error logging
+    Try a different version of the JDK
+    Add additional system dependencies
+
+E
+
+I'm still getting an error saying command not found when running java -version
+
+Let's try using apt directly to install Java first, which might handle dependencies better. Let me modify the Java installation part.
+
+Key changes:
+
+    Now using the BellSoft APT repository instead of manual .deb download
+    Simplified Java installation process using apt-get
+    Added proper repository key handling
+    Removed manual PATH setup since apt will handle this
+
+After running the script:
+
+    Please check the output for any error messages during Java installation
+    Try running java -version to verify the installation
+    If still having issues, please let me know what specific error messages you see during the installation process
+
+Would you like me to:
+
+    Try a different Java distribution?
+    Add more detailed error logging?
+    Try a different installation method?
+
+E
+
+I'm getting an offset not page aligned when trying to run java commands now
+
+This error typically occurs on ARM systems when there's a mismatch between the Java version and the system architecture. Let's try using the Debian/Raspberry Pi default OpenJDK instead, which is known to work well on Raspberry Pi.
+
+Key changes:
+
+    Switched from BellSoft JDK to OpenJDK 21 and OpenJFX
+    Simplified Java installation using standard Debian packages
+    Removed architecture-specific configurations
+    Added separate OpenJFX installation
+
+The main difference is that we're now using the standard Debian/Raspberry Pi packages which should be better compatible with the ARM architecture. After running the script:
+
+    Check if Java is properly installed:
+
+bash
+
+java -version
+
+    If you get any errors, please let me know what they are.
+
+If this still doesn't work, we could try:
+
+    Using an earlier version of OpenJDK (like 17)
+    Using a different Java distribution
+    Adding specific ARM configuration options
+
+E
+
+I got the program to start by installing bellsoft-jdk21.0.4+9-linux-aarch64-full.deb
+
+Ah, that makes sense - let's update the script to use the correct AArch64 version of BellSoft JDK instead of the ARM32 version.
+
+Key changes:
+
+    Updated to use AArch64 version of BellSoft JDK (21.0.4+9)
+    Removed unnecessary PATH configurations since the Debian package handles this
+    Simplified the Java installation process
+
+This should now work correctly on your Raspberry Pi. Would you like me to:
+
+    Add an uninstall option?
+    Add any specific Java runtime options?
+    Add more error checking?
+    Make any other modifications?
+
+E
+
+I think the source files might need to be compiled on the Pi before the program can run I'm getting an error when trying to run the program.
+
+If we need to compile the source files for the correct architecture, I'll modify the script to compile the Java files before installation.
+
+Key changes:
+
+    Added compilation step for Java source files
+    Creates bin directory if it doesn't exist
+    Builds proper classpath for compilation including JavaFX modules
+    Added error checking for compilation
+    Compiles all .java files found in the src directory
+
+The script will now:
+
+    Install Java
+    Download dependencies
+    Compile the source files for your Pi's architecture
+    Install the compiled files
+
+If you get any compilation errors, could you please share them? We might need to:
+
+    Add additional JavaFX modules
+    Modify the compilation classpath
+    Add specific compilation flags
+    Handle any dependencies needed for compilation
+
+Claude can make mistakes. Please double-check responses.
+
+
+Tip:
+Long chats cause you to reach your usage limits faster.
+ThrustStand Installation Script
 #!/bin/bash
 # install-thruststand.sh - Installation script for ThrustStand
 
@@ -13,13 +650,34 @@ INSTALL_DIR="/opt/$APP_NAME"
 BIN_DIR="/usr/local/bin"
 WMU_LOGO_URL="https://wmich.edu/sites/default/files/attachments/u171/2020/WMU%20primary-digital.png"
 
+# Function to install Java
+install_java() {
+    echo "Installing BellSoft JDK 21 (includes JavaFX)..."
+    
+    # Install required dependencies
+    apt-get install -y wget
+
+    # Download JDK
+    wget https://download.bell-sw.com/java/21.0.4+9/bellsoft-jdk21.0.4+9-linux-aarch64-full.deb
+
+    # Install JDK
+    if ! dpkg -i bellsoft-jdk21.0.4+9-linux-aarch64-full.deb; then
+        echo "Error during JDK installation, trying to fix dependencies..."
+        apt-get -f install -y
+        if ! dpkg -i bellsoft-jdk21.0.4+9-linux-aarch64-full.deb; then
+            echo "Failed to install JDK"
+            return 1
+        fi
+    fi
+
+    # Clean up
+    rm bellsoft-jdk21.0.4+9-linux-aarch64-full.deb
+
+    return 0
+}
+
 # Verify required directories exist
 echo "Checking for required directories..."
-if [ ! -d "bin" ]; then
-    echo "Error: bin directory not found"
-    exit 1
-fi
-
 if [ ! -d "src" ]; then
     echo "Error: src directory not found"
     exit 1
@@ -30,10 +688,20 @@ if [ ! -d "src/fxml" ]; then
     exit 1
 fi
 
-# Create lib directory if it doesn't exist
+if [ ! -d "src/styles" ]; then
+    echo "Error: src/styles directory not found"
+    exit 1
+fi
+
+# Create lib and bin directories if they don't exist
 if [ ! -d "lib" ]; then
     echo "Creating lib directory..."
     mkdir -p lib
+fi
+
+if [ ! -d "bin" ]; then
+    echo "Creating bin directory..."
+    mkdir -p bin
 fi
 
 # Create resources directory if it doesn't exist
@@ -59,19 +727,47 @@ if [ ! -f "src/resources/WMU_primary-digital.png" ]; then
     wget -O "src/resources/WMU_primary-digital.png" "$WMU_LOGO_URL"
 fi
 
-# Download and install Bellsoft JDK 21 if not present
-if ! command -v java &> /dev/null || ! java -version 2>&1 | grep -q "version \"21"; then
-    echo "Installing BellSoft JDK 21 (includes JavaFX)..."
-    wget https://download.bell-sw.com/java/21.0.1+12/bellsoft-jdk21.0.1+12-linux-arm32-vfp-hflt.deb
-    dpkg -i bellsoft-jdk21.0.1+12-linux-arm32-vfp-hflt.deb
-    rm bellsoft-jdk21.0.1+12-linux-arm32-vfp-hflt.deb
+# Check and install Java
+echo "Checking Java installation..."
+if ! command -v java &> /dev/null || ! java -version 2>&1 | grep -q "version \"21" 2>/dev/null; then
+    if ! install_java; then
+        echo "Failed to install Java. Please check error messages above."
+        exit 1
+    fi
 fi
+
+# Compile Java source files
+echo "Compiling Java source files..."
+# Build classpath for compilation
+COMPILE_CLASSPATH="."
+for jar in lib/*.jar; do
+    COMPILE_CLASSPATH="$COMPILE_CLASSPATH:$jar"
+done
+
+# Find all Java files in src directory
+find src -name "*.java" > sources.txt
+
+# Compile with JavaFX modules
+javac --module-path /usr/share/openjfx/lib \
+      --add-modules javafx.controls,javafx.fxml \
+      -d bin \
+      -cp "$COMPILE_CLASSPATH" \
+      @sources.txt
+
+if [ $? -ne 0 ]; then
+    echo "Compilation failed!"
+    rm sources.txt
+    exit 1
+fi
+
+rm sources.txt
 
 # Create installation directory structure
 echo "Creating installation directories..."
 mkdir -p $INSTALL_DIR/bin
 mkdir -p $INSTALL_DIR/lib
 mkdir -p $INSTALL_DIR/src/fxml
+mkdir -p $INSTALL_DIR/src/styles
 mkdir -p $INSTALL_DIR/src/resources
 
 # Copy application files
@@ -79,6 +775,7 @@ echo "Copying application files..."
 cp -r bin/* $INSTALL_DIR/bin/
 cp -r lib/* $INSTALL_DIR/lib/
 cp -r src/fxml/* $INSTALL_DIR/src/fxml/
+cp -r src/styles/* $INSTALL_DIR/src/styles/
 cp -r src/resources/* $INSTALL_DIR/src/resources/
 
 # Configure serial port access
@@ -100,6 +797,7 @@ fi
 echo "Creating launcher script..."
 cat > $BIN_DIR/$APP_NAME << EOF
 #!/bin/bash
+
 # Build classpath
 CLASSPATH="$INSTALL_DIR/bin"
 CLASSPATH="\$CLASSPATH:$INSTALL_DIR/lib/*"
@@ -127,16 +825,19 @@ echo "  ├── bin/ (compiled class files)"
 echo "  ├── lib/ (jserialcomm JAR)"
 echo "  └── src/"
 echo "      ├── fxml/"
+echo "      ├── styles/"
 echo "      └── resources/"
 echo "          └── WMU_primary-digital.png"
 echo ""
-echo "IMPORTANT: For serial port access to take effect, please either:"
+echo "Verifying Java installation:"
+which java
+java -version
+echo ""
+echo "IMPORTANT: For all changes to take effect, please either:"
 echo "1. Log out and log back in, or"
 echo "2. Reboot the Raspberry Pi"
 echo ""
 echo "You can run the application by typing 'thruststand' in the terminal"
 echo ""
-echo "Installed Java version:"
-java -version
 echo "Installation directory: $INSTALL_DIR"
 echo "Launcher location: $BIN_DIR/$APP_NAME"
